--- a/registroPresupuesto.html
+++ b/registroPresupuesto.html
@@ -8,13 +8,15 @@
     <script src="./registroPresupuesto.js" defer></script>
     <link rel="stylesheet" href="./registroPresupuesto.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://kit.fontawesome.com/5043dbf39b.js" crossorigin="anonymous"></script>
+
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" defer></script>
 </head>
 
 <body>
     <div class="button-container">
-        <button onclick="mostrarFormulario()">Registrar Presupuesto</button>
+        <button id="btnMostrarForm" onclick="mostrarFormulario()">Registrar Presupuesto</button>
     </div>
     <div class="contenido" id="contenido">
         <div class="contenedorGral">
@@ -23,7 +25,7 @@
                 <select name="selectClientes" id="selectClientes" >
                     <option value="" selected disabled>Seleccione un cliente</option>
                 </select>
-                <button type="button" onclick="mostrarRegistroCliente()">+ Nuevo Cliente</button>
+                <button type="button" onclick="mostrarRegistroCliente()"><i class="fa-solid fa-user-plus"></i> Nuevo Cliente</button>
         </div>
         <div class="clienteNuevo" id="clienteNuevo">
             <form class="clienteNuevo" id="clienteNuevoForm" onsubmit="registrarCliente(event)">
@@ -53,7 +55,7 @@
             <label for="descripcionServicio"></label>
             <textarea class="descripcionServicio" name="descripcionServicio" id="descripcionServicio" 
             placeholder="Descripcion del servicio a realizar..."></textarea>
-            <input type="number" id="precioServicio" class="precioServicio" placeholder="$ Precio del servicio" maxlength="9">
+            <input type="number" id="precioServicio" oninput="limitarLongitud(this)" class="precioServicio" placeholder="$ Precio del servicio" >
 
         </div>
         <div id="contenedorPiezas">
@@ -78,12 +80,13 @@
 
         <div id="montoTotal"> 
             <p>Total Estimado:</p>
-                <p id="spanMontoFinal">&nbsp;$ <p id="montoFinal">0.00</p></p>
+            <p id="spanMontoFinal">$ <p id="montoFinal" maxlenght="9">0.00</p></p>
         </div>
         <div id="buttonAcciones">
-            <button id="btnCancelar" class="btn btn-danger" onclick="cancelarPresupuesto()">Cancelar</button>
-            <button id="btnConfirmar" class="btn btn-success" onclick="confirmarPresupuesto()">Confirmar</button>
-            <button id="btnGenerar"  class="btn btn-primary" onclick="generarPDF()">Generar PDF</button>
+            <button id="btnConfirmar" class="btn btn-success" onclick="confirmarPresupuesto()"> <i class="fa-solid fa-check"></i> Confirmar</button>
+            <button id="btnGenerar"  class="btn btn-primary" onclick="generarPDF()"> <i class="fa-solid fa-download"></i> Generar PDF</button>
+            <button id="btnCancelar" class="btn btn-danger" onclick="cancelarPresupuesto()"> <i class="fa-solid fa-xmark"></i> Cancelar</button>
+
         </div>
     </div>
 </body>
