redistribucion formulario y insercion boton cancelar regiscliente

--- a/registroPresupuesto.html
+++ b/registroPresupuesto.html
@@ -108,25 +108,39 @@
             </div>
             <div class="clienteNuevo" id="clienteNuevo">
                 <form class="clienteNuevo" id="clienteNuevoForm" onsubmit="registrarCliente(event)">
-                    <label for="nombre">Nombre:</label>
-                    <input type="text" class="nombre form-control" id="nombre" name="nombre" required>
-
-                    <label for="apellido">Apellido:</label>
-                    <input type="text" class="apellido" id="apellido" name="apellido" required>
-
-                    <label for="telefono">Teléfono:</label>
-                    <input type="text" class="telefono" id="telefono" name="telefono">
-
-                    <label for="direccion">Dirección:</label>
-                    <input type="text" class="direccion" id="direccion" name="direccion" required>
-
-                    <label for="fechaNacimiento">Fecha de Nacimiento:</label>
-                    <input type="date" class="fechaNacimiento" id="fechaNacimiento" name="fechaNacimiento" required>
-
-                    <label for="mail">Correo Electrónico:</label>
-                    <input type="email" class="mail" id="mail" name="mail" required>
-
-                    <button type="submit">Enviar</button>
+                    <div class="input-group">
+                        <div>
+                            <label for="nombre">Nombre:</label>
+                            <input type="text" class="nombre" id="nombre" name="nombre" required>
+                        </div>
+                        <div>
+                            <label for="apellido">Apellido:</label>
+                            <input type="text" class="apellido" id="apellido" name="apellido" required>
+                        </div>
+                    </div>
+                    <div class="input-group">
+                        <div>
+                            <label for="mail">Correo Electrónico:</label>
+                            <input type="email" class="mail" id="mail" name="mail" required>
+                        </div>
+                        <div>
+                            <label for="telefono">Teléfono:</label>
+                            <input type="text" class="telefono" id="telefono" name="telefono">
+                        </div>
+                    </div>
+                    <div class="input-group">
+                        <div>
+                            <label for="direccion">Dirección:</label>
+                            <input type="text" class="direccion" id="direccion" name="direccion" required>
+                        </div>
+                        <div>
+                            <label for="fechaNacimiento">Fecha de Nacimiento:</label>
+                            <input type="date" class="fechaNacimiento" id="fechaNacimiento" name="fechaNacimiento" required>
+                        </div>
+                    </div>
+            
+                    <button type="reset" class="btnCancelar" id="btnCancelarr" onclick="ocultarRegistroCliente()">Cancelar</button>
+                    <button type="submit" class="btnConfirmar">Enviar</button>
                 </form>
             </div>
 
@@ -165,11 +179,11 @@
                 </p>
             </div>
             <div id="buttonAcciones">
-                <button id="btnConfirmar" class="btn btn-success" onclick="confirmarPresupuesto()"> <i
+                <button id="btnConfirmar" class="btnConfirmar" class="btn btn-success" onclick="confirmarPresupuesto()"> <i
                         class="fa-solid fa-check"></i> Confirmar</button>
                 <button id="btnGenerar" class="btn btn-primary" onclick="generarPDF()"> <i
                         class="fa-solid fa-download"></i> Generar PDF</button>
-                <button id="btnCancelar" class="btn btn-danger" onclick="cancelarPresupuesto()"> <i
+                <button id="btnCancelar" class="btnCancelar" onclick="cancelarPresupuesto()"> <i
                         class="fa-solid fa-xmark"></i> Cancelar</button>
 
             </div>
